# AegisIQ-Enterprise-Industrial-Decision-Intelligence

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml  requirements.txt  ruff.toml  seed_notifications_reports.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py  types.py
backend/app/graph/: __init__.py  service.py
backend/app/models/: __init__.py  asset.py  audit_log.py  base.py  incident.py  notification.py  report.py  user.py  worker.py
backend/app/rag/: __init__.py  documents.py  models.py  query.py  schemas.py  service.py  vector_store.py
backend/app/repositories/: asset_repository.py  audit_log_repository.py  base.py  incident_repository.py  notification_repository.py  report_repository.py
backend/app/schemas/: asset.py  audit_log.py  common.py  copilot.py  dashboard.py  digital_twin.py  emergency.py  incident.py  notification.py  report.py  risk_engine.py  user.py
backend/app/services/: asset_service.py  audit_log_service.py  dashboard_service.py  digital_twin_service.py  incident_service.py  notification_service.py  report_service.py  risk_engine.py  (+1 more)
backend/tests/: conftest.py  test_assets.py  test_dashboard.py  test_digital_twin.py  test_emergency.py  test_health.py  test_incidents.py  test_notifications.py  test_reports.py  test_risk_predictive.py
(+126 files in other folders)
